B-63707 Updating date & adding CSS fix for misaligned mobile landscape view

--- a/public/styles/projects/sweepstakes/win-1000-bucks-writing-reviews/style.scss
+++ b/public/styles/projects/sweepstakes/win-1000-bucks-writing-reviews/style.scss
@@ -203,6 +203,23 @@
 	}
 }
 
+@media screen and (orientation: landscape) {
+	.swpkes {
+
+		&:before {
+			width: 58%;
+		}
+
+		.swpkes__info {
+			width: 59%;
+		}
+
+		.swpkes__form {
+			width: 40%;
+		}
+	}
+}
+
 .swpkes__form {
 	position: relative;
 	text-align: center;
